--- a/css/entypo-glyph-set/entypo.css
+++ b/css/entypo-glyph-set/entypo.css
@@ -9,7 +9,7 @@
 }
 
 .entypo-social{
-  font: normal normal normal 16px/1 octicons;
+  font: normal normal normal 16px/1 entypo-social;
   display: inline-block;
   text-decoration: none;
   text-rendering: auto;
