--- a/css/custom.css
+++ b/css/custom.css
@@ -20,11 +20,22 @@
   font-weight: bold;
   text-align: center;
 }
-.footer {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
+.about {
+  padding-bottom: 20px;
 }
 .test-section {
   display: block;
+}
+.custom-jumbotron {
+  background: #3366cc;
+  background: linear-gradient(135deg, #2952a3, #3366cc 25%, #5c86d6 75%); 
+}
+.footer {
+  background: #e0e0d1;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+.email {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
 }
