attempt to keep footer at bottom of page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -31,9 +31,12 @@
   background: linear-gradient(135deg, #2952a3, #3366cc 25%, #5c86d6 75%); 
 }
 .footer {
+  bottom: 0;
   background: #e0e0d1;
   padding-top: 20px;
   padding-bottom: 10px;
+  position: absolute;
+  width: 100%;
 }
 .email {
   font-family: 'Roboto', sans-serif;
