--- a/css/custom.css
+++ b/css/custom.css
@@ -39,3 +39,12 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
 }
+.project-title,
+.project-title a {
+  font-family: 'Roboto', sans-serif;
+  color: #808080;
+  font-size: 20px;
+}
+.projects {
+  padding-bottom: 20px;
+}
