changed footer color to match navbar color

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,7 +38,7 @@
   /*background: linear-gradient(135deg, #2952a3, #3366cc 25%, #5c86d6 75%); */
 }
 .footer {
-  background: #e0e0d1;
+  background: #f8f8f8;
   padding-top: 20px;
   padding-bottom: 10px;
 }
